--- a/(W)here WatchKit App/Base.lproj/Interface.storyboard
+++ b/(W)here WatchKit App/Base.lproj/Interface.storyboard
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14256" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14868" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch44"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14243"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14219"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14643"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="_W_here_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <label width="1" alignment="center" text="John's iPhone X is out of Range" textAlignment="center" numberOfLines="2" id="5tU-Pd-FJm">
+                            <fontDescription key="font" type="system" pointSize="16"/>
+                        </label>
+                        <separator alignment="left" id="WiK-Nh-7Ah">
+                            <color key="color" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                        </separator>
+                        <label alignment="center" text="Last Location" id="jcI-gk-37C">
+                            <fontDescription key="font" type="system" pointSize="16"/>
+                        </label>
+                        <map width="1" widthAdjustment="156" height="122" alignment="center" id="t9V-UC-BRa"/>
+                        <button width="1" alignment="left" title="Button" id="Ht8-Pr-7eY">
+                            <connections>
+                                <action selector="StopLocation" destination="AgC-eL-Hgc" id="rbz-Mg-ZgH"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="220" y="356"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -32,14 +51,14 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="_W_here_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="Niz-AI-uX2">
             <objects>
-                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="eXb-UN-Cd0" customClass="NotificationController" customModule="_W_here_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="345"/>
         </scene>
